--- a/grails-app/assets/stylesheets/dash.css
+++ b/grails-app/assets/stylesheets/dash.css
@@ -68,3 +68,12 @@ textarea{
     justify-content: center;
     align-items: center;
 }
+
+/* #myForm {
+    display: none;
+  } */
+
+  
+  .Recent_share{
+    width: 750px;
+  }
