--- a/grails-app/assets/stylesheets/Login.css
+++ b/grails-app/assets/stylesheets/Login.css
@@ -169,8 +169,7 @@
   .navbar {
     background-color: #f2f2f2;
     width: 100%;
-    height: 60px;
-    padding: 0 20px;
+
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -227,7 +226,9 @@
 
 .dprofile{
   display: flex;
-  flex-direction: row;
+  align-items: center;
+    justify-content: space-between;
+    gap: 15px;
 }
 
 
@@ -248,6 +249,7 @@
 .Dash{
   display: flex;
   margin: 5% 5% 0% 5%;
+}
 }
 
 .leftD{
@@ -296,16 +298,19 @@
 }
 
 .hSub{
+    height: 50px;
   display: flex;
     align-items: center;
   justify-content: space-between;
   background-color: #888;
-  border: 2px solid black;
+  /*border: 2px solid black;*/
 
 }
 .view_all{
-    display: flex;
-    align-items: center;
+   text-decoration:none;
+    color: #1d2124;
+
+
 }
 
 .DSubcontent{
@@ -328,6 +333,10 @@
   border-radius: 5px;
   background-color: #fff;
   cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Style for dropdown options (optional) */
