--- a/grails-app/assets/stylesheets/dash.css
+++ b/grails-app/assets/stylesheets/dash.css
@@ -85,6 +85,23 @@ textarea{
   } */
 
   
-  #Recent_share{
+  .recent_shares{
     width: 750px;
   }
+
+ table {
+     font-family: arial, sans-serif;
+     border-collapse: collapse;
+     width: 100%;
+ }
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
